--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -2,12 +2,17 @@
   background-color: #0b0c22;
 }
 
+.bg-header-homepage {
+  box-shadow: 0px 0px 24px #151933 !important;
+  background-color: #151933 !important;
+}
+
 .bg-homepage2 {
   background-color: #151933;
 }
 
 .bg-homepage-banner {
-  background-image: url(../../assets/img/background/homepage.jpg);
+  background-image: url(../../assets/img/background/homepage.png);
   background-size: cover;
 }
 
