--- a/src/styles/pages/_loginregister.scss
+++ b/src/styles/pages/_loginregister.scss
@@ -3,12 +3,121 @@
 //   background-size: cover;
 // }
 
-.bg-login {
-  background-image: url(../../assets/img/loginregister/bglogin.jpg);
-  background-size: cover;
+// .bg-login {
+//   background-image: url(../../assets/img/loginregister/bglogin.jpg);
+//   background-size: cover;
+// }
+
+// .bg-register {
+//   background-image: url(../../assets/img/loginregister/bgregister.png);
+//   background-size: cover;
+// }
+.ax-account-body {
+  background-color: rgba(29, 33, 47, 0.5);
+  .ax-auth-page {
+      max-width: 460px;
+      position: relative;
+      margin: 0 auto;
+      .ax-auth-card {
+          background: rgba($color: rgba(29, 33, 47, 0.5), $alpha: 0.9);
+          border-radius: 20px;
+          border: none;
+          .ax-auth-logo-box {
+              position: absolute;
+              left: 0;
+              right: 0;
+              top: -25px;
+              text-align: center;
+              .ax-auth-logo {
+                  border-radius: 12px;
+                  background-color: rgba(29, 33, 47, 0.5);
+                  padding: 4px;
+                  -webkit-box-shadow: 0px 0px 0px 2.25px $theme-YellowBase-BackgroundDefault;
+                          box-shadow: 0px 0px 0px 2.25px $theme-YellowBase-BackgroundDefault;
+              }
+          }
+          
+          .ax-auth-logo-text {
+              font-family: "Roboto", sans-serif;
+              h4 {
+                  font-weight: 600;
+                  font-size: 22px;
+              }
+          }
+
+          .form-control {
+              border-radius: 8px;
+              padding-right: 40px;
+              background: #aeb4ce50;
+              border: none;
+              &:focus {
+                  box-shadow: 0px 0px 6px #4b535e;
+              }
+          }
+          .auth-form-icon {
+              width: 32px;
+              height: 32px;
+              background-color: rgba(29, 33, 47, 0.5);
+              text-align: center;
+              line-height: 32px;
+              border-radius: 8px;
+              position: absolute;
+              right: 3px;
+              z-index: 100;
+              top: 3px;
+              color: #8997bd;
+          }
+          .geetest_radar_btn {
+            background: #474a5350;
+            border: none;
+            border-radius: 8px;
+            &:hover {
+              background: #5c606d50;
+            }
+          }
+      }
+  }
+} 
+
+.ax-account-body.ax-accountbg-login {
+    background-image: url("../../assets/img/auth/archidaxLogin.png");
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 100vh;
+    .ax-account-title {
+        width: 500px;
+        position: relative;
+        display: block;
+        margin: 0 auto;
+        h1 {
+            font-size: 60px;
+            font-weight: 700;
+            margin: 30px 0;
+        }
+    }
+}
+.ax-account-body.ax-accountbg-register {
+    background-image: url("../../assets/img/auth/archidaxRegister.png");
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 100vh;
+    .ax-account-title {
+        width: 500px;
+        position: relative;
+        display: block;
+        margin: 0 auto;
+        h1 {
+            font-size: 60px;
+            font-weight: 700;
+            margin: 30px 0;
+        }
+    }
 }
 
-.bg-register {
-  background-image: url(../../assets/img/loginregister/bgregister.png);
-  background-size: cover;
+@media (max-width: 768px) {
+  .ax-auth-card {
+      margin-top: 34px;
+  }
 }
