--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -98,3 +98,4 @@ li {
 @import "./pages/404page";
 @import "./pages/pengajuanKoin";
 @import './pages/keuanganpage';
+@import './pages/launchpadHome';
