--- a/src/styles/pages/_loginregister.scss
+++ b/src/styles/pages/_loginregister.scss
@@ -80,7 +80,7 @@
 } 
 
 .ax-account-body.ax-accountbg-login {
-    background-image: url("../../assets/img/auth/archidaxLogin.png");
+    background-image: url("../../assets/img/auth/archidaxLogin.jpg");
     background-size: cover;
     background-position: center center;
     width: 100%;
@@ -98,7 +98,7 @@
     }
 }
 .ax-account-body.ax-accountbg-register {
-    background-image: url("../../assets/img/auth/archidaxRegister.png");
+    background-image: url("../../assets/img/auth/archidaxRegister.jpg");
     background-size: cover;
     background-position: center center;
     width: 100%;
