Update Launchpad Detail

--- a/src/styles/pages/_launchpadHome.scss
+++ b/src/styles/pages/_launchpadHome.scss
@@ -7,3 +7,7 @@
 .content-launchpad {
     min-height: 100vh;
 }
+.ci-tabs-launchpad.active {
+    background: #F9BA42 !important;
+    color: black !important;
+}
