--- a/src/styles/pages/_trade.scss
+++ b/src/styles/pages/_trade.scss
@@ -1508,10 +1508,10 @@ input ~ .tab {
   display: block;
 }
 
-// input ~ .tab2 {
-//   display: none;
-// }
-// #tab3:checked ~ .tab.content3,
-// #tab4:checked ~ .tab.content4 {
-//   display: block;
-// }
+input ~ .tab2 {
+  display: none;
+}
+#tab3:checked ~ .tab.content3,
+#tab4:checked ~ .tab.content4 {
+  display: block;
+}
