--- a/src/styles/pages/_trade.scss
+++ b/src/styles/pages/_trade.scss
@@ -401,9 +401,9 @@ $chat-color: black;
   }
 
   .nav .nav-item .nav-link.active {
-    color: #08eeaa;
+    color: #178d6a;
     // background: $base-color-tabs-mainchart-active;
-    border-bottom: 1px solid #08eeaa;
+    border-bottom: 1px solid #178d6a;
     border-radius: 0px;
     height: 40px;
     font-size: 14px;
