--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -317,27 +317,27 @@
 
 // Button Tabs
 .ci-btn-tabsBars {
-  background: #2C355A;
+  background: #2c355a;
   border: none;
   border-radius: 4px;
   color: white;
   padding: 16px;
   &:hover {
-      color: #DDDDDD;
+    color: #dddddd;
   }
   &:focus {
-      outline: none !important;
+    outline: none !important;
   }
 }
 .ci-btn-tabsBars.active {
-  background: #F9BD00;
-  color: #2C355A;
+  background: #f9bd00;
+  color: #2c355a;
   font-weight: bold;
   &:hover {
-      color: lighten($color: #2C355A, $amount: 4);
+    color: lighten($color: #2c355a, $amount: 4);
   }
   &:focus {
-      outline: none !important;
+    outline: none !important;
   }
 }
 .ci-btn-tabsBarsBorder:focus {
@@ -346,7 +346,7 @@
   border-width: 1px;
   border-bottom: 1px;
   border-style: solid;
-  border-image: linear-gradient(to bottom, #ffedb3, rgba(0,0,0,0)) 1 100%;
+  border-image: linear-gradient(to bottom, #ffedb3, rgba(0, 0, 0, 0)) 1 100%;
   border-image-slice: 5%;
   outline: none;
 }
@@ -356,7 +356,7 @@
   border-width: 1px;
   border-bottom: 1px;
   border-style: solid;
-  border-image: linear-gradient(to bottom, #ffedb3, rgba(0,0,0,0)) 1 100%;
+  border-image: linear-gradient(to bottom, #ffedb3, rgba(0, 0, 0, 0)) 1 100%;
   border-image-slice: 5%;
 }
 .ci-btn-tabsBarsBorder.active {
@@ -365,7 +365,7 @@
   border-width: 1px;
   border-bottom: 0;
   border-style: solid;
-  border-image: linear-gradient(to bottom, #F9BD00, rgba(0,0,0,0)) 1 100%;
+  border-image: linear-gradient(to bottom, #f9bd00, rgba(0, 0, 0, 0)) 1 100%;
   border-image-slice: 5%;
 }
 // End Button Tabs
@@ -501,3 +501,54 @@
     color: black;
   }
 }
+
+// RADIO
+// [type="radio"]:checked,
+// [type="radio"]:not(:checked) {
+//   position: absolute;
+//   left: -9999px;
+// }
+// [type="radio"]:checked + label,
+// [type="radio"]:not(:checked) + label {
+//   position: relative;
+//   padding-left: 28px;
+//   cursor: pointer;
+//   line-height: 20px;
+//   display: inline-block;
+//   color: #666;
+// }
+// [type="radio"]:checked + label:before,
+// [type="radio"]:not(:checked) + label:before {
+//   content: "";
+//   position: absolute;
+//   left: 0;
+//   top: 0;
+//   width: 18px;
+//   height: 18px;
+//   border: 1px solid #ddd;
+//   border-radius: 100%;
+//   background: #fff;
+// }
+// [type="radio"]:checked + label:after,
+// [type="radio"]:not(:checked) + label:after {
+//   content: "";
+//   width: 12px;
+//   height: 12px;
+//   background: #f87da9;
+//   position: absolute;
+//   top: 4px;
+//   left: 4px;
+//   border-radius: 100%;
+//   -webkit-transition: all 0.2s ease;
+//   transition: all 0.2s ease;
+// }
+// [type="radio"]:not(:checked) + label:after {
+//   opacity: 0;
+//   -webkit-transform: scale(0);
+//   transform: scale(0);
+// }
+// [type="radio"]:checked + label:after {
+//   opacity: 1;
+//   -webkit-transform: scale(1);
+//   transform: scale(1);
+// }
