--- a/src/styles/helpers/_layout.scss
+++ b/src/styles/helpers/_layout.scss
@@ -30,3 +30,25 @@
 .br-5 {
   border-radius: 5px;
 }
+
+//
+.col-sm-2half,
+.col-sm-9half {
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+@media (min-width: 768px) {
+  .col-sm-2half,
+  .col-sm-9half {
+    float: left;
+  }
+  .col-sm-2half {
+    width: 22%;
+  }
+  .col-sm-9half {
+    width: 78%;
+  }
+}
