--- a/src/styles/pages/_trade.scss
+++ b/src/styles/pages/_trade.scss
@@ -1604,3 +1604,5 @@ input ~ .tabsell {
   background: url(../../assets/img/trade/volume/day-buy.svg);
   background-repeat: no-repeat;
 }
+
+// Arrow
