--- a/src/styles/helpers/_fontColors.scss
+++ b/src/styles/helpers/_fontColors.scss
@@ -43,3 +43,8 @@
   -webkit-text-fill-color: transparent;
 }
 /* Theme Colors Text Dark Mode*/
+
+.chatcolor:hover {
+  color: #f9ba42;
+  font-weight: bold
+}
