--- a/src/styles/pages/_trade.scss
+++ b/src/styles/pages/_trade.scss
@@ -87,7 +87,7 @@ $price-text: black;
 $price-text2: white;
 $tab-header: #00688f;
 $tab-hover: rgba(232, 232, 232, 1);
-$chat-bg: rgba(189, 189, 189, 0.3);
+$chat-bg: black;
 $chat-color: black;
 
 :root {
