--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -16,6 +16,11 @@
   background-size: cover;
 }
 
+.bg-homepage-banner2 {
+  background-image: url(../../assets/img/gif/cewe.gif);
+  background-size: cover;
+}
+
 .bg-homepage-yellow {
   background-color: #dfb331;
 }
@@ -875,4 +880,22 @@
     text-align: center;
     font-weight: 500;
   }
+}
+
+#homepageVideo {
+  // position: absolute;
+  // right: 0;
+  // bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.content-home {
+  position: absolute;
+  top: 100px;
+  background: rgba(0, 0, 0, 0.4);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+  height: 56vh;
 }
