--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -831,22 +831,26 @@
 }
 
 .bg-news1 {
-  background-image: url(../../assets/img/homepage/infonews/frame4.png);
+  // background-image: url(../../assets/img/homepage/infonews/frame4.png);
+  background-image: url(../../assets/img/homepage/announcements/bnb.jpg);
   background-size: cover;
 }
 
 .bg-news2 {
-  background-image: url(../../assets/img/homepage/infonews/frame5.png);
+  // background-image: url(../../assets/img/homepage/infonews/frame5.png);
+  background-image: url(../../assets/img/homepage/announcements/waves.jpg);
   background-size: cover;
 }
 
 .bg-news3 {
-  background-image: url(../../assets/img/homepage/infonews/frame6.png);
+  // background-image: url(../../assets/img/homepage/infonews/frame6.png);
+  background-image: url(../../assets/img/homepage/announcements/bnb.jpg);
   background-size: cover;
 }
 
 .bg-news4 {
-  background-image: url(../../assets/img/homepage/infonews/frame7.png);
+  // background-image: url(../../assets/img/homepage/infonews/frame7.png);
+  background-image: url(../../assets/img/homepage/announcements/waves.jpg);
   background-size: cover;
 }
 
