--- a/src/styles/pages/_loginregister.scss
+++ b/src/styles/pages/_loginregister.scss
@@ -12,6 +12,13 @@
 //   background-image: url(../../assets/img/loginregister/bgregister.png);
 //   background-size: cover;
 // }
+.country-name {
+    color: black !important;
+}
+
+.intl-tel-input input{
+    color: white !important;
+}
 .ax-account-body {
   background-color: rgba(29, 33, 47, 0.5);
   .ax-auth-page {
