--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -128,6 +128,10 @@
   background: rgba(0, 0, 0, 0.6);
 }
 
+.bg-overlay-homepage2 {
+  background: rgba(0, 0, 0, 0.4);
+}
+
 // Banner
 
 //
@@ -882,7 +886,7 @@
   .nav .nav-item .nav-link.active {
     color: #f9ba42;
     // background: $base-color-tabs-mainchart-active;
-    border-bottom: 1px solid #f9ba42;
+    border-bottom: 1px solid rgba(249, 186, 66, 0.6);
     border-radius: 0px;
     height: 40px;
     font-size: 14px;
