--- a/src/styles/pages/_launchpadHome.scss
+++ b/src/styles/pages/_launchpadHome.scss
@@ -1,13 +1,19 @@
 .launchpad-banner {
-    background-image: url('../../assets/img/background/launchpad-banner.png');
-    background-size: cover;
-    background-repeat: no-repeat;
+  //   background-image: url('../../assets/img/background/launchpad-banner.png');
+  background-image: url(../../assets/img/launchpad/launchpad-header.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.jumbotron-launchpad {
+  padding: 6rem 2rem;
+  margin-bottom: 2rem;
 }
 
 .content-launchpad {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 .ci-tabs-launchpad.active {
-    background: #F9BA42 !important;
-    color: black !important;
+  background: #f9ba42 !important;
+  color: black !important;
 }
