--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -870,6 +870,12 @@
   overflow: auto;
 }
 
+#overflowTestChatTrade {
+  width: 100%;
+  height: 400px;
+  overflow: auto;
+}
+
 // Tabs Chart
 .tabs-info-news {
   .nav .nav-item .nav-link {
