--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -14,6 +14,41 @@
 
 .bg-homepage2 {
   background-color: #151933;
+  // background-color: transparent;
+}
+
+.bg-homepage2-transform {
+  background-color: #151933;
+  transform: skewY(-10deg);
+  // position: absolute;
+  top: 0;
+}
+
+.footer-luar {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  // border: 3px solid #73ad21;
+}
+
+.footer-dalam {
+  position: absolute;
+  top: -100px;
+  right: 0;
+  width: 100%;
+  height: 400px;
+  // border: 3px solid #73ad21;
+  background-color: #151933;
+  transform: skewY(-5deg);
+}
+.footer-dalam2 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 400px;
+  // border: 3px solid #73ad21;
+  background-color: #151933;
 }
 
 .bg-homepage-banner {
