--- a/src/styles/pages/_trade.scss
+++ b/src/styles/pages/_trade.scss
@@ -386,6 +386,7 @@ $chat-color: black;
     border-radius: 0px;
     height: 40px;
     font-size: 14px;
+    border-bottom: 1px solid green;
   }
 }
 
