--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -97,5 +97,6 @@ li {
 @import "./pages/loginregister";
 @import "./pages/404page";
 @import "./pages/pengajuanKoin";
-@import './pages/keuanganpage';
-@import './pages/launchpadHome';
+@import "./pages/keuanganpage";
+@import "./pages/launchpadHome";
+@import "./pages/traderesponsive";
