--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,11 +14,11 @@ $theme-GreyBase-BackgroundDefault: #aeb4ce;
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap");
 @import url("react-bootstrap-table-next/dist/react-bootstrap-table2.min.css");
 @font-face {
-  font-family: 'Digital-7';
+  font-family: "Digital-7";
   src: url("../assets/font/digital-7.woff2");
 }
 .font-digital {
-  font-family: 'Digital-7';
+  font-family: "Digital-7";
   line-height: 25px;
 }
 
@@ -108,3 +108,6 @@ li {
 @import "./pages/keuanganpage";
 @import "./pages/launchpadHome";
 @import "./pages/traderesponsive";
+
+/* Pages-2 */
+@import "./pages/homepage/fiturpage";
