Update Trade Derivative

--- a/src/styles/helpers/_backgroundColors.scss
+++ b/src/styles/helpers/_backgroundColors.scss
@@ -33,6 +33,9 @@
 .ci-bg-success {
   background-color: #1ba27a;
 }
+.ax-bg-success {
+    background: #189129;
+}
 
 .ci-bg-gray {
   background-color: #cbcbcb;
