--- a/src/styles/helpers/_fontColors.scss
+++ b/src/styles/helpers/_fontColors.scss
@@ -10,8 +10,22 @@
   color: #f9ba42;
 }
 
+.ax-text-gray {
+  color: #BDBDBD;
+}
 .text-gray2 {
   color: #c1c1c1;
+}
+
+.ax-text-danger {
+  color: #EB5757;
+}
+.ax-text-bullish {
+  color: #00D696;
+}
+
+.ax-text-blueLight {
+  color: #8B98C7;
 }
 
 .text-ci-primary {
