--- a/src/styles/pages/_trade.scss
+++ b/src/styles/pages/_trade.scss
@@ -94,6 +94,8 @@ $chat-color: black;
   --color1: #{$base-color1};
 }
 
+$header-hTrade: 6vh;
+
 // .dark {
 //   --color1: #{$base-color1-dark};
 // }
@@ -102,15 +104,31 @@ $chat-color: black;
   transition: all 0.15s ease;
 }
 
+@media screen and (min-width: 600px) {
+  .navbar-trade {
+    height: $header-hTrade;
+  }
+  .body-trade2 {
+    min-height: 100vh - $header-hTrade;
+    background-color: $base-color6;
+  }
+  .body-trade2-dark {
+    min-height: 100vh - $header-hTrade;
+    background-color: $base-color6-dark;
+  }
+}
+
 .body-trade {
   min-height: 100vh;
   background-color: $base-color3;
 }
 
 .body-trade2 {
+  min-height: 100vh - $header-hTrade;
   background-color: $base-color6;
 }
 .body-trade2-dark {
+  min-height: 100vh - $header-hTrade;
   background-color: $base-color6-dark;
 }
 .daynight {
@@ -1539,7 +1557,6 @@ input:checked + .slider:before {
 // Dropdown list coin
 .list-coin-responsive {
   padding: 5px 15px;
-  width: 90%;
 }
 
 @media (min-width: 750px) {
