--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,7 +11,7 @@ $theme-YellowBase-BackgroundDefault: #e7cf6d;
 $theme-GreyBase-BackgroundDefault: #aeb4ce;
 
 // Font type
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&display=swap');
 @import url('react-bootstrap-table-next/dist/react-bootstrap-table2.min.css');
 @font-face {
   font-family: 'Digital-7';
