finish bounty page

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -75,6 +75,7 @@ li {
 @import './components/popup';
 @import './components/animation';
 @import './components/banner';
+@import './components/popupbounty';
 
 /* Helpers */
 @import './helpers/container';
