--- a/src/styles/pages/_bountypage.scss
+++ b/src/styles/pages/_bountypage.scss
@@ -25,7 +25,7 @@
   z-index: 2;
 }
 .info {
-  font-size: 1.5em;
+  font-size: 20px;
 }
 
 table {
@@ -63,6 +63,9 @@ table {
 // all card
 .font-xs {
   font-size: 0.7em;
+}
+.font-md {
+  font-size: 0.9em;
 }
 
 .card-twitter {
