--- a/src/styles/components/_popupbounty.scss
+++ b/src/styles/components/_popupbounty.scss
@@ -1,20 +1,20 @@
-.modal {
+.modal-bounty {
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: auto;
+  z-index: 99999999999;
+
 }
 
-.modal-inner {
-  position: relative;
-  padding: 32px;
+.modal-inner-bounty {
+  padding: 22px;
   border-radius: 8px;
   color: white;
-  overflow: auto;
 }
 
 .close-btn {
