--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -110,6 +110,7 @@ li {
 @import './pages/launchpadHome';
 @import './pages/traderesponsive';
 @import './pages/bountypage';
+@import './pages/lendmark';
 
 /* Pages-2 */
 @import './pages/homepage/fiturpage';
