--- a/src/styles/pages/_bountypage.scss
+++ b/src/styles/pages/_bountypage.scss
@@ -2,6 +2,7 @@
   //   background-image: url('../../assets/img/background/launchpad-banner.png');
   background-image: url(../../assets/img/bounty/bgbounty.png);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .jumbotron-bounty {
