fix keamanan page

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -87,7 +87,7 @@ li {
 @import './helpers/trackScrollbar';
 @import './helpers/layout';
 @import './helpers/paddingSizes';
-
+@import "./helpers/pagination";
 /* Pages */
 @import './pages/loadingPage';
 @import './pages/homepage';
